# qt-beginner

./: .gitignore
qmlb-11-1/: CMakeLists.txt  main.cpp
qmlb-11-2/: CMakeLists.txt  main.cpp  test.cpp  test.h
qmlb-11-3/: CMakeLists.txt  Main.qml  main.cpp  test.cpp
qmlb-11-4/: CMakeLists.txt  Main.qml  main.cpp  test.cpp
qmlb-11-5/: CMakeLists.txt  Main.qml  machine.cpp  machine.h  main.cpp
qmlb-3-1/: CMakeLists.txt  Main.qml  main.cpp
qmlb-3-3/: CMakeLists.txt  Main.qml  main.cpp
qmlb-3-4/: CMakeLists.txt  Main.qml  main.cpp
qmlb-3-5/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-1/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-2/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-3/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-4/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-5/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-6/: CMakeLists.txt  Main.qml  MyButton.qml  main.cpp
qmlb-5-1/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-2/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-3/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-4/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-5/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-6/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-7/: CMakeLists.txt  Main.qml  MyShape.qml  main.cpp
qmlb-5-8/: CMakeLists.txt  Main.qml  main.cpp
qmlb-5-9/: CMakeLists.txt  HoverButton.qml  Main.qml  images.qrc  main.cpp
qt-htc-vive/console-app/: console-app.vcxproj  console-app.vcxproj.filters
qt-htc-vive/console-app/x64/Debug/: console-app.exe.recipe  console-app.ilk  vc143.idb
qt-htc-vive/console-app/x64/Debug/console-app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
qt-htc-vive/htc-vive-static-lib/: htc-vive-static-lib.sln
qt-htc-vive/htc-vive-static-lib/htc-vive-static-lib/: MathLibrary.cpp  htc-vive-static-lib.cpp  htc-vive-static-lib.vcxproj  htc-vive-static-lib.vcxproj.filters
qt-htc-vive/htc-vive-static-lib/htc-vive-static-lib/x64/Debug/: htc-vive-static-lib.pch
qt-htc-vive/htc-vive-static-lib/htc-vive-static-lib/x64/Debug/htc-vive.276e8e58.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  htc-vive-static-lib.lastbuildstate
qt-htc-vive/htc-vive-static-lib/x64/Debug/: htc-vive-static-lib.idb  htc-vive-static-lib.lib
qt-htc-vive/qt-app/: CMakeLists.txt  Main.qml  htcvivemanager.cpp  htcvivemanager.h  main.cpp
